# product-scraper

./: B0CCZ1L489.html  api.py  main.py  pyproject.toml  requirements.txt  scheduler.py
src/: logger.py
src/config/: db.py
src/prodscrape/api/: amazon_api.py  auth.py
src/prodscrape/browser/: client.py
src/prodscrape/scraper/: amazon_scraper.py  base_scraper.py
